package kia;

public abstract class AccessoryDecorator extends Car {
    public abstract String getDescription();
}
