package kia.cars;
import kia.Car;

public class VibrantMT extends Car {
    public VibrantMT(){
        description = "VibrantMT";
    }
    
    @Override
    public double cost() {
        return 56990000;
    }

}
