package kia.cars;

import kia.Car;

public class ZenithAT extends Car {
    public ZenithAT(){
            description = "ZenithAT";
    }
    

    @Override
    public double cost() {
        return 68990000;
    }
}
