package kia.cars;
import kia.Car;

public class ZenithMT extends Car {

    public ZenithMT(){
        description = "ZenithMT";
    }

    @Override
    public double cost() {
        return 63990000;
    }
}
